deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-container
          image: ion21/client-service:06.02.2025.18.18.50
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-config-volume
              mountPath: /app/public/config
              readOnly: true
      volumes:
        - name: app-config-volume
          configMap:
            name: app-config
            items:
              - key: config.json
                path: config.json

---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: client
