deployment-gateway.yaml
# ion21/gateway-service:27.01.2025.16.14.29
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ion21/gateway-service:27.01.2025.16.14.29
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: gateway
