deployment-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  ports:
    - name: http
      port: 5601
      targetPort: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.12.1
        ports:
          - containerPort: 5601
        volumeMounts:
          - name: kibana-data
            mountPath: /usr/share/kibana/data
      volumes:
        - name: kibana-data
          persistentVolumeClaim:
            claimName: kibana-pvc
