deployment-logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
spec:
  ports:
    - name: tcp-log
      port: 3100
      targetPort: 3100
  selector:
    app: logstash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:8.12.1
        ports:
          - containerPort: 3100
            name: tcp-log
        volumeMounts:
          - name: logstash-pipeline-volume
            mountPath: /usr/share/logstash/pipeline
      volumes:
        - name: logstash-pipeline-volume
          configMap:
            name: logstash-pipeline-cm
            items:
              - key: logstash.conf
                path: logstash.conf
