deployment-nserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nserver-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nserver-service
  template:
    metadata:
      labels:
        app: nserver-service
    spec:
      containers:
        - name: nserver-service
          image: ion21/server-service:06.02.2025.10.40.48
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nserver-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: nserver-service
