deployment-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service-service
          image: ion21/query-service:16.12.2024.16.44.15
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: query-service
