ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/rewrite-target: /


spec:
  rules:
    - host: react-app.local
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
          - path: /config
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 5000
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
